--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
   "scripts": {
     "docs:dev": "npx vuepress dev docs",
     "docs:build": "npx vuepress build docs",
-    "publish": "sh publish.sh"
+    "publish": "sh publish.sh",
+    "dev": "nodemon ./src/js/server.js"
   },
   "dependencies": {
     "@vuepress/plugin-back-to-top": "^1.7.1",
     "@vuepress/plugin-pwa": "^1.7.1",
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.20",
     "vuepress": "^1.7.1",
     "vuepress-theme-cool": "^1.3.1"
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0"
+    "gh-pages": "^4.0.0",
+    "nodemon": "^2.0.20"
   }
 }
